fix broken inversion of cv icon colors in dark mode

--- a/dark.scss
+++ b/dark.scss
@@ -20,8 +20,7 @@ $code-padding: 0px !default;
 
 .quarto-title-banner   { color: #ffffff !important; }
 
-
-div.contact > ul > li > a > img {
+.linkedin, .shiftup, .phone {
   filter: invert(100%);
 }
 
